# geo_to_hca

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py  test.csv  test.txt
apps/: geo_to_hca.py  geo_to_hca_v2.py  get_attribs.py  get_tab.py  handle_errors.py  parse_reads.py  sra_utils.py  utils.py
apps/utils/: get_tab.py  parse_reads.py
docs/: 210511hca_template.xlsx  210519hca_template.xlsx  210921hca_template.xlsx  example_accessions.txt  geo_accessions-full.txt  geo_accessions-testing.txt  geo_accessions.txt  hca_template.xlsx  issues.txt
docs/Outdated Templates/: 210823hca_template.xlsx  250519hca_template.xlsx  hca_template.xlsx
geo_to_hca/: __init__.py  geo_to_hca.py  pubmed_id_to_hca_publication.py
geo_to_hca/utils/: entrez_client.py  get_attribs.py  get_tab.py  handle_errors.py  parse_reads.py  sra_utils.py  utils.py
lambda/: accession_project_import.py  requirements.txt
results/: results_geo_accessions.txt
template/: README.md  hca_full_template.xlsx  hca_gut_template.xlsx  hca_lung_template.xlsx  hca_template.xlsx  hca_template_contributor.xlsx  hlca_template.xlsx
tests/: table_comparator.py  test_geo_to_hca.py  test_table_comparator.py
tests/data/expected/: GSE119945.xlsx  GSE121611.xlsx  GSE122960.xlsx  GSE132509.xlsx  GSE134174.xlsx  GSE138669.xlsx  GSE144236.xlsx  GSE144239.xlsx  GSE144240.xlsx  GSE147482.xlsx  GSE151091.xlsx  GSE156456.xlsx  GSE167597.xlsx  GSE192721.xlsx  GSE195719.xlsx  GSE202210.xlsx  GSE202601.xlsx  GSE205642.xlsx  GSE97168.xlsx
