[tool.poetry]
name = "geo-to-hca"
version = "1.0.0"
description = "Python library to convert GEO metadata to HCA metadata"
authors = ["Ami Day <ami@ebi.ac.uk>", "Alegria Aclan <aaclan@ebi.ac.uk>", "Enrique Sapien Venture <enrique@ebi.ac.uk>", "Wei Kheng Teh <wteh@ebi.ac.uk>"]
readme = "README.md"
repository = "https://github.com/ebi-ait/geo_to_hca"

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.26.0"
pysradb = "^1.1.0"
pandas = "^1.3.5"
openpyxl = "^3.0.9"
PyYAML = "^6.0"
contextlib2 = "^21.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
